@@ -14,7 +14,7 @@ depth: 1
 
 ### Other features
 
- * ...
+ * Add [`wagtailcache`](wagtailcache) and [`wagtailpagecache`](wagtailpagecache) template tags to ensure previewing Pages or Snippets will not be cached (Jake Howard)
 
 ### Bug fixes
 
